--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,20 @@
 Package: locuscomparer
 Type: Package
-Title: What the Package Does (Title Case)
+Title: locuscomparer: Visualization of GWAS-QTL Colocalization Events
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Author@R: c(
+    person('Boxiang','Liu', email = 'jollier.liu@gmail.com', role = c('aut','cre')),
+    person('Michael','Gloudemans', email = 'mgloud@stanford.edu', role = c('ctb'),
+    person('Stephen', 'Montgomery', email = 'smontgom@stanford.edu', role = c('ctb')))
+Description: locuscomparer is the standalone version of the LocusCompare 
+    webserver (www.locuscompare.ml:3838). locuscomparer performs visualization 
+    of colocalization of summary statistics from pairs of association datasets 
+    (e.g. GWAS and eQTL).
+License: GPL-3
 Encoding: UTF-8
 LazyData: true
-Imports: data.table,
-    cowplot,
-    stringr,
-    ggrepel
+Imports: cowplot (>= 0.6.1),
+    data.table (>= 1.10.4),
+    ggrepel (>= 0.6.5),
+    R.utils (>= 2.6.0),
+    stringr (>= 1.2.0)
