--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: locuscomparer
 Type: Package
 Title: locuscomparer: Visualization of GWAS-QTL Colocalization Events
-Version: 0.1.0
+Version: 1.0.0
 Author@R: c(
     person('Boxiang','Liu', email = 'jollier.liu@gmail.com', role = c('aut','cre')),
     person('Michael','Gloudemans', email = 'mgloud@stanford.edu', role = c('ctb'),
@@ -14,8 +14,8 @@ License: GPL-3
 Encoding: UTF-8
 LazyData: true
 Imports: cowplot (>= 0.6.1),
-    data.table (>= 1.10.4),
+    ggplot2 (>= 2.2.1),
     ggrepel (>= 0.6.5),
-    R.utils (>= 2.6.0),
     stringr (>= 1.2.0)
 RoxygenNote: 6.0.1
+Suggests: testthat
