Added documentation to each function. Changed config.rda to use read-only RDS instance,

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,10 +3,10 @@
 export(assign_color)
 export(get_lead_snp)
 export(get_position)
-export(main)
+export(locuscompare)
 export(make_combined_plot)
-export(make_locuscatter)
 export(make_locuszoom)
+export(make_scatterplot)
 export(read_metal)
 export(retrieve_LD)
 import(cowplot)
